	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-get-and-render-timeline): Likewise.

	* twittering-mode.el (twittering-read-username-with-completion):
	Convert a list of username strings to an alist before calling
	`completing-read' to work on Emacs21; same as
	`twittering-read-timeline-spec-with-completion'.

	* twittering-mode.el (twittering-icon-path): Delete function.

2010-01-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	`save-excursion' had no effect because of the following
	`set-buffer'. This is fixed so that `save-excursion' saves the
	state of `temp-buffer'.
	(twittering-get-response-header): Likewise.
	(twittering-get-response-body): Likewise.
	(twittering-tinyurl-get): Likewise.
	(twittering-tinyurl-get): `buffer' are killed even if
	`search-forward-regexp' fails.

2010-01-09  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-edit-setup-help): add to setup
	help overlay in pop-up buffer
	(twittering-edit-next-history, twittering-edit-previous-history):
	use twittering-edit-setup-help

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-percent-encode): bug fix:
	'\n','\r','\t' were not encoded correctly.

2010-01-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-use-show-minibuffer-length): Add
	suggestion into a docstring.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-not-blank-p): bug fix:
	always return nil with strings with trailing newline.
	(twittering-edit-next-history): add.
	(twittering-edit-previous-history, twittering-edit-history): add
	history for pop-up buffer
	(twittering-edit-mode-map): defined key for next/previous-history
	(twittering-edit-mode): initialize local variables for history
	(twittering-edit-mode): setup help string overlay
	(twittering-edit-post-status): don't close buffer if tweet is
	empty
